main.tf
# Add Terraform main resources here
# As an Example,below is a VPC Configuration
# 
# TODO: uncomment the below VPC resource if the VPC is needed to be created via TF
# resource "aws_vpc" "main" {
#   cidr_block           = var.vpc_cidr
#   enable_dns_hostnames = true
#   enable_dns_support   = true

#   tags = {
#     Name = "test-vpc"
#   }
# }
